--- a/my-gallery.html
+++ b/my-gallery.html
@@ -14,7 +14,7 @@
                     <input type="search" id="search" placeholder="Search..." style=" text-align: left; margin: 0%;background-color: rgb(11, 71, 71);; border: 2px, solid, white; border-radius: 30px; height: 30px; color: white;">>
                 </td>
                 <td style="text-align: right;">
-                    <a href="about-me.html" style="color:  white;">About me</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="index.html" style="color:  white;">About me</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="skills.html" style="color: white;">Skills</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="contact.html" style="color: white;">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <a href="my-gallery.html" style="color:  white;">My Gallery</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -61,4 +61,5 @@
     </footer>
     
 </body>
+
 </html>
